samples/_failures_safe/1761724325_c6b35a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c741b3f.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_9c741b3f.c:183:5: error: expected declaration or statement at end of input
  183 |     }
      |     ^
